# ocaml-index-stats

./: README.md  dune-project  ocaml-index-stats.opam
lib/ocaml_index_utils/: dune  ocaml_index_utils.ml  ocaml_index_utils.mli
lib/ocaml_index_utils/compat/: compat.mli  compat.post54.ml  compat.pre54.ml
lib/ocaml_shape_utils/: ocaml_shape_utils.ml  ocaml_shape_utils.mli
test/: dune
test/functor.t/: dune  main.ml  run.t
test/functor.t/functor/: dune  hetero_map.ml  hetero_map.mli  map.ml  map.mli
test/lib.t/: run.t
test/lib.t/lib/: a.ml  a.mli  b.ml  b.mli
